Implemented a grid component and it's documentation

--- a/pages/components/Grid/grid.html
+++ b/pages/components/Grid/grid.html
@@ -82,20 +82,46 @@
     &lt;link rel="stylesheet" 
     href="https://si-mpleui.netlify.app/pages/components/Grid/grid.css">
             </code></pre>
-        <div class="grid-container">
+        <h2 class="sub-comp-header">grid-2: two items in a grid</h2>
+        <div class="grid-container-2">
             <div class="grid-item">item 1</div>
             <div class="grid-item">item 2</div>
         </div>
         <br />
         <p class="component-description">
-            ---
+            A two item grid can be used with the following syntax.
         </p>
         <pre class="comp-code-container">
             <code class="html">
-               ---
+                &lt;div class="grid-container-2">
+                    &lt;div class="grid-item">item 1&lt;/div>
+                    &lt;div class="grid-item">item 2&lt;/div>
+                &lt;/div>
+                <br />
             </code>
         </pre>
-
+        <br />
+        <h2 class="sub-comp-header">grid-3: three items in a grid</h2>
+        <div class="grid-container-3">
+            <div class="grid-item">item 1</div>
+            <div class="grid-item">item 2</div>
+            <div class="grid-item">item 3</div>
+        </div>
+        <br />
+        <p class="component-description">
+            A three item grid can be used with the following syntax.
+        </p>
+        <pre class="comp-code-container">
+            <code class="html">
+                &lt;div class="grid-container-3">
+                    &lt;div class="grid-item">item 1&lt;/div>
+                    &lt;div class="grid-item">item 2&lt;/div>
+                    &lt;div class="grid-item">item 3&lt;/div>
+                &lt;/div>
+                <br />
+            </code>
+        </pre>
+        <br />
         <footer class="page-footer">
             <a href="../Modal/modal.html" class="footer-button">
                 <img src="../../../images/previous-arrow.svg" alt="" />Modal
