--- a/pages/components/Grid/grid.css
+++ b/pages/components/Grid/grid.css
@@ -1,13 +1,24 @@
-.grid-container {
+.grid-container-3,
+.grid-container-2 {
   display: grid;
-  grid-template-columns: auto auto auto;
-  background-color: #2196f3;
-  padding: 10px;
+  background-color: var(--medium-primary-color);
+  padding: 1rem;
+  gap: 1rem;
 }
+
 .grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  font-size: 30px;
+  background-color: var(--secondary-color);
+  border: 1px solid var(--primary-color);
+  padding: 2rem;
+  font-size: 1.5rem;
   text-align: center;
+  color: var(--white-global);
+}
+
+.grid-container-3 {
+  grid-template-columns: auto auto auto;
+}
+
+.grid-container-2 {
+  grid-template-columns: auto auto;
 }
