Added the basic skeleton of Rating

--- a/pages/components/Rating/rating.html
+++ b/pages/components/Rating/rating.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modal</title>
+    <title>Rating</title>
     <link rel="stylesheet" href="../../../css/header.css" />
     <link rel="stylesheet" href="../../../css/main.css" />
     <link rel="stylesheet" href="../../../css/comp-page.css" />
     <link rel="stylesheet" href="../../../css/utilities.css" />
-    <link rel="stylesheet" href="./modal.css" />
-    <link rel="stylesheet" href="../Button/button.css" />
+    <link rel="stylesheet" href="./rating.css" />
     <link rel="shortcut icon" href="../../../images/simpleUIlogo.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../../../images/simpleUIlogo.png" />
     <link rel="stylesheet" href="../../../css/night-owl.css">
@@ -80,67 +79,60 @@
         </ul>
     </nav>
     <main class="component-display">
-        <h1 class="component-display-header">Modal</h1>
+        <h1 class="component-display-header">Ratings</h1>
         <pre class="comp-code-container"><code class="html">
-    @import url("https://si-mpleui.netlify.app/pages/components/Modal/modal.css");
+    @import url("https://si-mpleui.netlify.app/pages/components/Rating/rating.css");
     &lt;link rel="stylesheet" 
-    href="https://si-mpleui.netlify.app/pages/components/Modal/modal.css">
+    href="https://si-mpleui.netlify.app/pages/components/Rating/rating.css">
             </code></pre>
-        <div class="modal-demo">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Modal title</h5>
-                        <button type="button" class="btn-close">
-                            <span aria-hidden="true"></span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Modal body text goes here.</p>
-                    </div>
-                    <div class="modal-footer ">
-                        <button type="button" class="btn btn-success">Save Changes</button>
-                        <button type="button" class="btn btn-error">Cancel</button>
-                    </div>
-                </div>
-            </div>
+        <h2 class="sub-comp-header">grid-2: two items in a grid</h2>
+        <div class="grid-container-2">
+            <div class="grid-item">item 1</div>
+            <div class="grid-item">item 2</div>
         </div>
         <br />
         <p class="component-description">
-            A modal can be used with the following syntax,
+            A two item grid can be used with the following syntax.
         </p>
         <pre class="comp-code-container">
             <code class="html">
-                &lt;div class="modal">
-                    &lt;div class="modal-dialog" role="document">
-                        &lt;div class="modal-content">
-                            &lt;div class="modal-header">
-                                &lt;h5 class="modal-title">Modal title&lt;/h5>
-                                &lt;button type="button" class="btn-close" >
-                                    &lt;span aria-hidden="true">&lt;/span>
-                                &lt;/button>
-                            &lt;/div>
-                            &lt;div class="modal-body">
-                                &lt;p>Modal body text goes here.&lt;/p>
-                            &lt;/div>
-                            &lt;div class="modal-footer ">
-                                &lt;button type="button" class="btn btn-success">Save Changes&lt;/button>
-                                &lt;button type="button" class="btn btn-error">Cancel&lt;/button>
-                            &lt;/div>
-                        &lt;/div>
-                    &lt;/div>
+                &lt;div class="grid-container-2">
+                    &lt;div class="grid-item">item 1&lt;/div>
+                    &lt;div class="grid-item">item 2&lt;/div>
                 &lt;/div>
+                <br />
             </code>
         </pre>
-
+        <br />
+        <h2 class="sub-comp-header">grid-3: three items in a grid</h2>
+        <div class="grid-container-3">
+            <div class="grid-item">item 1</div>
+            <div class="grid-item">item 2</div>
+            <div class="grid-item">item 3</div>
+        </div>
+        <br />
+        <p class="component-description">
+            A three item grid can be used with the following syntax.
+        </p>
+        <pre class="comp-code-container">
+            <code class="html">
+                &lt;div class="grid-container-3">
+                    &lt;div class="grid-item">item 1&lt;/div>
+                    &lt;div class="grid-item">item 2&lt;/div>
+                    &lt;div class="grid-item">item 3&lt;/div>
+                &lt;/div>
+                <br />
+            </code>
+        </pre>
+        <br />
         <footer class="page-footer">
-            <a href="../Text/text.html" class="footer-button">
-                <img src="../../../images/previous-arrow.svg" alt="" />Text
-            </a>
             <a href="../Grid/grid.html" class="footer-button">
-                Grid
-                <img src="../../../images/forward-arrow.svg" alt="" />
+                <img src="../../../images/previous-arrow.svg" alt="" />Grid
             </a>
+            <!-- <a href="../Text/text.html" class="footer-button">
+                Text
+                <img src="../../../images/forward-arrow.svg" alt="" />
+            </a> -->
         </footer>
     </main>
     <script src="../../../src/colorTheme.js"></script>
