--- a/pages/components/Grid/grid.html
+++ b/pages/components/Grid/grid.html
@@ -73,6 +73,9 @@
             <li class="component-links">
                 <a href="../Grid/grid.html">Grid</a>
             </li>
+            <li class="component-links">
+                <a href="../Rating/rating.html">Rating</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
@@ -126,10 +129,10 @@
             <a href="../Modal/modal.html" class="footer-button">
                 <img src="../../../images/previous-arrow.svg" alt="" />Modal
             </a>
-            <!-- <a href="../Text/text.html" class="footer-button">
-                Text
+            <a href="../Rating/rating.html" class="footer-button">
+                Rating
                 <img src="../../../images/forward-arrow.svg" alt="" />
-            </a> -->
+            </a>
         </footer>
     </main>
     <script src="../../../src/colorTheme.js"></script>
