--- a/pages/components/Image/image.html
+++ b/pages/components/Image/image.html
@@ -73,6 +73,9 @@
             <li class="component-links">
                 <a href="../Grid/grid.html">Grid</a>
             </li>
+            <li class="component-links">
+                <a href="../Rating/rating.html">Rating</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
