Implemented and documented rating component

--- a/pages/components/Rating/rating.html
+++ b/pages/components/Rating/rating.html
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="../../../images/simpleUIlogo.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../../../images/simpleUIlogo.png" />
     <link rel="stylesheet" href="../../../css/night-owl.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -85,46 +86,37 @@
     &lt;link rel="stylesheet" 
     href="https://si-mpleui.netlify.app/pages/components/Rating/rating.css">
             </code></pre>
-        <h2 class="sub-comp-header">grid-2: two items in a grid</h2>
-        <div class="grid-container-2">
-            <div class="grid-item">item 1</div>
-            <div class="grid-item">item 2</div>
-        </div>
+        <h2 class="sub-comp-header">Poor Rating</h2>
+        <span class="fa fa-star checked-poor"></span>
+        <span class="fa fa-star checked-poor"></span>
+        <span class="fa fa-star empty"></span>
+        <span class="fa fa-star empty"></span>
+        <span class="fa fa-star empty"></span>
+        <br />
+        <h2 class="sub-comp-header">Moderate Rating</h2>
+        <span class="fa fa-star checked-moderate"></span>
+        <span class="fa fa-star checked-moderate"></span>
+        <span class="fa fa-star checked-moderate"></span>
+        <span class="fa fa-star empty"></span>
+        <span class="fa fa-star empty"></span>
+        <br />
+        <h2 class="sub-comp-header">Good Rating</h2>
+        <span class="fa fa-star checked-good"></span>
+        <span class="fa fa-star checked-good"></span>
+        <span class="fa fa-star checked-good"></span>
+        <span class="fa fa-star checked-good"></span>
+        <span class="fa fa-star checked-good"></span>
         <br />
         <p class="component-description">
-            A two item grid can be used with the following syntax.
+            A Rating component can be used with the following syntax.
         </p>
         <pre class="comp-code-container">
             <code class="html">
-                &lt;div class="grid-container-2">
-                    &lt;div class="grid-item">item 1&lt;/div>
-                    &lt;div class="grid-item">item 2&lt;/div>
-                &lt;/div>
-                <br />
+                &lt;span class="fa fa-star checked-poor">&lt;/span>
+                &lt;span class="fa fa-star checked-moderate">&lt;/span>
+                &lt;span class="fa fa-star checked-good">&lt;/span>
             </code>
         </pre>
-        <br />
-        <h2 class="sub-comp-header">grid-3: three items in a grid</h2>
-        <div class="grid-container-3">
-            <div class="grid-item">item 1</div>
-            <div class="grid-item">item 2</div>
-            <div class="grid-item">item 3</div>
-        </div>
-        <br />
-        <p class="component-description">
-            A three item grid can be used with the following syntax.
-        </p>
-        <pre class="comp-code-container">
-            <code class="html">
-                &lt;div class="grid-container-3">
-                    &lt;div class="grid-item">item 1&lt;/div>
-                    &lt;div class="grid-item">item 2&lt;/div>
-                    &lt;div class="grid-item">item 3&lt;/div>
-                &lt;/div>
-                <br />
-            </code>
-        </pre>
-        <br />
         <footer class="page-footer">
             <a href="../Grid/grid.html" class="footer-button">
                 <img src="../../../images/previous-arrow.svg" alt="" />Grid
